# dagster-multihost-launcher

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  admin_assets.py  dagster.yaml  docker-compose.yml  docker-tls-setup-guide.md  host_b_docker-compose.yml  launcher.py  pyproject.toml  workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dagster_multihost_launcher/: __init__.py  admin_assets.py  launcher.py
dagster_multihost_launcher/cli/: __init__.py  config.py  deploy.py  graphql_client.py  pull.py  status.py
integration_test/: run_test.py
integration_test/admin_location/: __init__.py
integration_test/bare_process_test_location/: __init__.py
integration_test/dockerized_test_location/: __init__.py
integration_test/host_a/: Dockerfile_admin  Dockerfile_dagster  dagster.yaml  docker-compose.yml  workspace.yaml
integration_test/host_b/: Dockerfile_dockerized  dagster_run_worker.yaml  docker-compose.yml
integration_test/host_d/: dagster.yaml  setup.ps1  start_grpc.ps1
tests/: test_launcher_routing.py
