[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-multihost-launcher"
version = "0.1.1"
description = "A composite Dagster run launcher that routes runs to multiple Docker daemons or the default launcher based on code location."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Isaac C Henry" },
]
keywords = ["dagster", "docker", "multi-host", "run-launcher", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dagster>=1.6.0",
    "dagster-docker>=0.22.0",
    "docker>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/isaac/dagster-multihost-launcher"
Repository = "https://github.com/isaac/dagster-multihost-launcher"
"Bug Tracker" = "https://github.com/isaac/dagster-multihost-launcher/issues"

[dependency-groups]
dev = [
    "pytest",
    "dagster[test]",
    "pre-commit",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["dagster_multihost_launcher*"]
